--- a/public/guide.html
+++ b/public/guide.html
@@ -687,7 +687,7 @@
                         <div class="title" style="height:30px ;width: 730px;margin:0 0 5px 80px;"><span>推荐攻略</span>
                         </div>
                         <div id="total_guideline">
-                            <div class="guideline_recommend" @click="click_replace('https://www.mafengwo.cn/i/24429248.html?sys_ver=')">
+                            <div class="guideline_recommend" @click="click_replace('')">
                                 <div class="guideline_recommend_type"><i
                                         class="el-icon-ship"></i>&nbsp;来自&nbsp;<strong>游记</strong></div>
                                 <div class="guideline_recommend_title">赴一场迟到两年的约会 | 去贵州邂逅一百种绿色！</div>
@@ -701,7 +701,7 @@
                                 </div>
                             </div>
 
-                            <div class="guideline_recommend" @click="click_replace('https://www.mafengwo.cn/gonglve/ziyouxing/408455.html')" style="height:230px;">
+                            <div class="guideline_recommend" @click="click_replace('')" style="height:230px;">
                                 <div class="guideline_recommend_type"><i
                                         class="el-icon-bicycle"></i>&nbsp;来自&nbsp;<strong>自由行</strong></div>
                                 <div class="guideline_recommend_title">
@@ -715,7 +715,7 @@
 
                             </div>
 
-                            <div class="guideline_recommend" @click="click_replace('https://www.mafengwo.cn/gonglve/ziyouxing/303640.html')">
+                            <div class="guideline_recommend" @click="click_replace('')">
                                 <div class="guideline_recommend_type"><i
                                         class="el-icon-bicycle"></i>&nbsp;来自&nbsp;<strong>自由行</strong></div>
                                 <div class="guideline_recommend_title">
