--- a/public/test2.html
+++ b/public/test2.html
@@ -11,13 +11,11 @@
 </head>
 <body>
     <div id="app">
-        <div id="ts" style="height: 615px;width: 500px;padding: 0;background-color: rgb(124, 212, 121);overflow: hidden;margin: auto;">
-        <div style="height: 200px; width: 500px;border-bottom: 2px solid rgb(211, 205, 205);margin-bottom: 5px;background-color:thistle ;"></div>
-        <div style="height: 200px; width: 500px;border-bottom: 2px solid rgb(211, 205, 205);margin-bottom: 5px;background-color:thistle"></div>
-        <div style="height: 200px; width: 500px;border-bottom: 2px solid rgb(211, 205, 205);margin-bottom: 5px;background-color:thistle"></div>
-        <div style="height: 200px; width: 500px;border-bottom: 2px solid rgb(211, 205, 205);margin-bottom: 5px;background-color:thistle"></div>
+        <div style="height: 200px;width: 200px;background-color: rgb(124, 212, 121);"></div>
+        <div style="height: 200px;width: 200px;position: relative;">
+            <img src="https://cube.elemecdn.com/0/88/03b0d39583f48206768a7534e55bcpng.png" alt="" style="position: absolute;top: -78px;">
+            
         </div>
-        <div id="bb" @click="a_click" style="text-align: center;height: 20px;width: 500px;background-color: aliceblue;margin: auto;"></div>
     </div>
 
     <script>
