--- a/public/guide.html
+++ b/public/guide.html
@@ -44,6 +44,7 @@
         .head-li {
             display: inline;
             margin-left: 29px;
+            cursor: pointer;
         }
 
         .head-li:hover {
@@ -52,6 +53,8 @@
 
         .el1 {
             overflow-y: hidden;
+            width: 55px;
+            margin: auto;
         }
 
         .el2 {
@@ -281,14 +284,14 @@
                 <el-header style="height: 60px;">
                     <el-row style="height: 58px;">
                         <el-col :span="4" style="height: 58px;">
-                            <div class="el1"><img src="./img/logo.png" alt="" /></div>
+                            <div class="el1"><img src="./img/logo.png" alt="" width="55px" height="55px"/></div>
                         </el-col>
                         <el-col :span="16" style="height: 58px;">
                             <div class="el2">
                                 <ul class="head-ul">
                                     <li class="head-li">首页</li>
                                     <li class="head-li">旅游攻略</li>
-                                    <li class="head-li">景点详情</li>
+                                    <li class="head-li">酒店民宿</li>
                                     <li class="head-li">个人中心</li>
                                     <li class="head-li">社区</li>
                                     <li class="head-li">AI咨询</li>
